examples/test/testpolicy13045.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13045
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key14: value45
      key35: value41
      key5: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value5
          key21: value32
          key26: value19
      podSelector:
        matchLabels:
          key24: value0
          key32: value16
          key13: value30
